# AY-Synth

ay-synth-embedded/: CMakeLists.txt  build.sh
ay-synth-embedded/src/: main.c
ay-synth-tracker/: package-lock.json  package.json
ay-synth-tracker/src-tauri/: tauri.conf.json
